# Cheezam

./: .gitignore  README.md  first.ipynb  main.ipynb  mobv2.ipynb  second.ipynb  test_nb.ipynb
HITS/: instructions.txt
HITS/jobs/: Pipfile  myapp.py  myjob.sh  test_app.py  test_job.sh
HITS/jobs/output/: console_output.txt  myapp_output.txt
HITS/jobs/output_HITS/: myapp_output.txt  myjob_8299965.out
HITS/jobs/output_XPS13/: .myapp_output.txt.swp  myapp_output.txt
data/images/Emmenthal de Savoie/: Emmental-de-SAvoie--cdt-AFTALP-ImagesAssocijpg
data/other_datasets/fourmes/: .directory  .~lock.fourmes_train.csv#  fourmes_train.csv
models/auto_cleaned/model0/: keras_metadata.pb  saved_model.pb  training_history
models/auto_cleaned/model0/variables/: variables.index
modules/google-images-download/google_images_download/: arg_parser.py  google_images_download.py  utils.py
modules/imagedownloader/: pyproject.toml
modules/imagedownloader/imagedownloader/: imagedownloader.py
modules/imagedownloader/tests/: test_imagedownloader.py
